# django-api-admin

./: .gitignore  README.md  manage.py  mixins.py  pyproject.toml  schema.yaml
.github/workflows/: python-package.yml  python-publish.yml
api_admin/: asgi.py  settings.py  urls.py  wsgi.py
django_api_admin/: API_DOCS.md  __init__.py  actions.py  apps.py  bulk.py  changelist.py  checks.py  conf.py  constants.py  decorators.py  exceptions.py  extensions.py  fields.py  filters.py  hooks.py  mixins.py  models.py  openapi.py  pagination.py  permissions.py  serializers.py  sites.py
django_api_admin/admin_views/admin_site_views/: admin_api_root.py  admin_log.py  app_index.py  app_list.py  autocomplete.py  get_authenticated_user.py  get_permissions.py  history.py  language_catalog.py  password_change.py  site_context.py  user_information.py  view_on_site.py
django_api_admin/admin_views/model_admin_views/: add.py  change.py  changelist.py  delete.py  detail.py  handle_action.py  history.py  list.py
django_api_admin/admins/: base_admin.py  inline_admin.py  model_admin.py
django_api_admin/utils/: _get_non_gfk_field.py  build_q_object_from_lookup_parameters.py  construct_change_message.py  diff_helper.py  flatten.py  flatten_fieldsets.py  format_error.py  get_changed_data.py  get_content_type_for_model.py  get_deleted_objects.py  get_field_attributes.py  get_fields_from_path.py  get_form_config.py  get_form_fields.py  get_inline_by_field_name.py  get_inline_by_name.py  get_inlines.py  get_last_value_from_parameters.py  get_model_from_relation.py  get_related_name.py  label_for_field.py  lookup_field.py  lookup_spawns_duplicates.py  model_format_dict.py  model_ngettext.py  model_serializer_factory.py  modelserializer_defines_fields.py  modelserializer_factory.py  module_loading.py  nested_objects.py  prepare_lookup_value.py  quote.py  remove_field.py  reverse_field_path.py  url_params_from_lookup_dict.py  validate_bulk_edits.py  validate_inline_field_names.py
example/: actions.py  adapters.py  admin.py  factories.py  models.py
example/management/commands/: populate_db.py
example/migrations/: 0001_initial.py
shop/: admin.py  factories.py  models.py  permissions.py
shop/management/commands/: populate_db.py
shop/migrations/: 0001_initial.py
test_django_api_admin/: admin.py  apps.py  extensions.py  fields.py  models.py  serializers.py  utils.py  views.py
test_django_api_admin/migrations/: 0002_category_product.py  0003_remove_product_category_delete_category_and_more.py  0004_author_latitude_author_longitude.py  0005_category_article.py  0006_revision.py
test_django_api_admin/tests/: test_admin.py  test_custom.py  test_inlines.py  test_site.py
tests/: runtests.py  test_sqlite.py
tests/django_api_admin/: actions.py  admin.py  fields.py  models.py  serializers.py
tests/mock_app/: actions.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
