[project]
name = "django-api-admin"
version = "1.2.2"
description = "A RESTful API implementation of django.contrib.admin, designed for writing custom frontends."
authors = [{name = "Muhammad Salah", email = "msbizzacc0unt@outlook.com"}]
license-files = ["LICENSE", "LICENSE-*"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  # Or your chosen license
    "Operating System :: OS Independent",
]
dependencies = [
    "django",
    "djangorestframework",
    "drf-spectacular",
]
requires-python = ">=3.12"

[project.urls]
Github = "https://github.com/demon-bixia/django-api-admin"

[tool.uv.build-backend]
module-root = ""
source-include = ["assets/**"]
source-exclude = ["<root>/api_admin"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "api_admin.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]


[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pillow>=12.2.0",
    "ruff>=0.15.15",
    "tblib>=3.2.2",
]
dev = [
    "pillow>=12.2.0",
    "django-allauth[mfa,socialaccount]>=65.18.0",
    "django-cors-headers>=4.9.0",
    "python-dotenv>=1.2.2",
    "factory-boy>=3.3.3",
]

[tool.ruff]
# Target Python version
target-version = "py312"
# Match your existing line length preference
line-length = 127
extend-exclude = [
    "migrations",
]

[tool.ruff.lint]
# Select rules: E (Error), F (Pyflakes/Undefined names)
# This perfectly replaces flake8's E9, F63, F7, F82
select = ["E", "F"]
